...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background_color">

    <com.frostwire.android.gui.views.ViewFlipper
        android:id="@+id/activity_wizard_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1.0">

        <com.frostwire.android.gui.views.GeneralWizardPage
...
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:text="@string/wizard_previous"
            android:theme="@style/Button" />

        <Button
            android:id="@+id/activity_wizard_button_next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:text="@string/wizard_next"
...
