...
    android:layout_height="wrap_content"
    android:background="@drawable/default_dialog_background"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/dialog_default_scroll_title"
        style="@style/DefaultDialogTheme.TitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/dialog_default_scroll_scrollview"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/app_background_white" />

        <Button
            android:id="@+id/dialog_default_scroll_button_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="0.5"
            android:background="@color/app_background_white" />
    </LinearLayout>
...
