<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2017, FrostWire(R). All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_search_input_radiogroup_file_type"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_background_dark"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/view_search_input_radio_audio"
        style="@style/SearchInputFileTypeButton"
        android:button="@drawable/browse_peer_audio_icon_selector_off" />

    <RadioButton
        android:id="@+id/view_search_input_radio_videos"
        style="@style/SearchInputFileTypeButton"
        android:button="@drawable/browse_peer_video_icon_selector_off" />

    <RadioButton
        android:id="@+id/view_search_input_radio_pictures"
        style="@style/SearchInputFileTypeButton"
        android:button="@drawable/browse_peer_picture_icon_selector_off" />

    <RadioButton
        android:id="@+id/view_search_input_radio_applications"
        style="@style/SearchInputFileTypeButton"
        android:button="@drawable/browse_peer_application_icon_selector_off" />

    <RadioButton
        android:id="@+id/view_search_input_radio_documents"
        style="@style/SearchInputFileTypeButton"
        android:button="@drawable/browse_peer_document_icon_selector_off" />

    <RadioButton
        android:id="@+id/view_search_input_radio_torrents"
        style="@style/SearchInputFileTypeButton"
        android:button="@drawable/browse_peer_torrent_icon_selector_off" />

</RadioGroup>
