...
            android:layout_width="match_parent"
            android:layout_height="5dip"
            android:indeterminate="true"
            android:progress="25"/>

    <com.frostwire.android.gui.views.SearchInputView
            android:id="@+id/fragment_search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <com.frostwire.android.gui.views.SwipeLayout
            android:id="@+id/fragment_search_swipe"
            android:layout_width="match_parent"
...
            <com.frostwire.android.gui.views.SearchProgressView
                android:id="@+id/fragment_search_search_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ListView
                android:id="@+id/fragment_search_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/scrollbar_default_style"
                android:divider="@color/transparent"
                android:dividerHeight="0dp"
                android:childDivider="#00000000"
...
