...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/clearable_edittext_background">

    <com.frostwire.android.gui.views.FWAutoCompleteTextView
        android:id="@+id/view_clearable_edit_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:dropDownVerticalOffset="11dp"
        android:background="@android:color/transparent"
        android:hint="@null"
...
