...
            android:text="@string/search_icebridge_starting"
            android:textColor="@color/app_text_secondary"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/view_search_progress_text_no_results_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_results_feedback"
            android:textSize="18sp"
            android:visibility="gone" />
...
