...
    <string name="dialog_new_transfer_text_text">Are you sure you want to download %1$s (%2$s)</string>
    <string name="dialog_new_transfer_check_text">Show this next time</string>
    <string name="show_new_transfer_dialog">Show New Transfer dialog</string>
    <string name="dummy_action" translatable="false">[Action]</string>
    <string name="clear">Clear</string>
    <string name="wizard_previous">Previous</string>
    <string name="wizard_next">Next</string>
    <string name="wizard_finish">Finish</string>
    <string name="dummy_content_description" translatable="false">[dummy description]</string>
    <string name="welcome_to_frostwire">Welcome to FrostWire %s</string>
    <string name="seeding_settings">Seeding Settings</string>
    <string name="seeding_settings_explanation">BitTorrent users on the internet will be able to download file chunks of the data your torrents seed.</string>
    <string name="seeding_wifi_settings_explanation">Seed only when using a Wi-Fi connection. Avoid extra charges from your carrier.</string>
    <string name="intent_text">FrostWire is a peer-to-peer program for sharing authorized files only. Installing and using the program does not constitute a license for obtaining or distributing unauthorized content.</string>
    <string name="accept_intent">I will not use FrostWire for copyright infringement</string>
    <string name="toast_on_disconnect">Disconnected from BitTorrent. All BitTorrent transfers have stopped.</string>
    <string name="seeds">Seeds</string>
    <string name="seeds_n">Seeds: %s</string>
    <string name="peers_n">Peers: %s</string>
    <string name="size_unknown">size unknown</string>
    <string name="playing">Playing</string>
...
    <string name="cheaper_than_parking">Cheaper than Parking</string>
    <string name="cheaper_than_cigarettes">Cheaper than Cigarettes</string>
    <string name="cheaper_than_beer">Cheaper than Beer</string>
    <string name="cheaper_than_gas">Cheaper than Gas</string>
    <string name="keep_the_project_alive">Keep the Project Alive</string>
    <string name="processing_payment">Processing payment, refresh in a few seconds</string>
    <string name="i_have_read_and_agree_to_the">I have read and agree to the</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="haptic_feedback">Haptic Feedback</string>
    <string name="advertisement">Advertisement</string>
    <string name="frostwire_features">FROSTWIRE CREATIVE COMMONS FEATURES</string>
    <string name="all_free_downloads">All free downloads</string>
    <string name="distraction_free_search_results">Distraction Free Search</string>
...
    <string name="period_yearly">yearly</string>
    <string name="open_file_explorer">Open File Explorer</string>
    <string name="comma">,</string>
    <string name="permission_denied">Permission denied</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="information">Information</string>
    <string name="ok">OK</string>
    <string name="yt_not_supported_on_basic">YouTube downloads are not supported by FrostWire Basic due to Google Play rules.\n\nFor a free copy of FrostWire Plus go to our official website frostwire.com</string>
    <string name="use_btdigg">Use BTDigg</string>
    <string name="use_yt">Use YT</string>
    <string name="analyzing_downloadable_files">Analyzing downloadable files URLs</string>
    <string name="error_cannot_open_downloads_folder">No app found to view downloads. Ensure FrostWire has permissions and a File Explorer is installed</string>
    <string name="subs_details">You will not be charged during the 7-day trial period.\n\nSubscription is charged as soon as the 7 day trial period ends or immediatly for previous subscribers.\n\nSubscription is automatically renewed unless cancelled at least 24 hours prior to the end of the subscription period.\n\nPress \'Manage Subscriptions\' for auto-renewals and cancellations in Google Play.<
...
