...
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/intent_text" />

        <CheckBox
            android:id="@+id/view_intent_wizard_page_check_accept_copyright"
            style="@style/WizardText.Sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/view_intent_wizard_page_check_accept_tou"
                style="@style/WizardText.Sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/i_have_read_and_agree_to_the" />

...
